# slick_object_pool

./: CHANGELOG  CMakeLists.txt  DOCUMENTATION.md  README.md
cmake/: slick_object_pool-config.cmake.in
include/slick/: object_pool.h
tests/: CMakeLists.txt  tests.cpp
